Test Code 및 코드 수정 (#92)
* feat : ReviewServiceTest 코드 작성

* feat : ReviewDetailResponse에 유저의 프로필url 추가 및 Null 체크

* fix : ReviewDetailResponse 부분 수정